feat: add meta tags in the head

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Qui-suis je? Atch</title>
+    <meta name="description" content="Non, ce n'est pas un site de rencontre." />
+    <link rel="manifest" href="/manifest.json" />
+    <meta property="og:title" content="Qui-suis je? Atch" />
+    <meta property="og:description" content="Non, ce n'est pas un site de rencontre." />
+    <meta property="og:image" content="https://atsuhiro.site/qui-suis-je-hero.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Qui-suis je? Atch" />
+    <meta name="twitter:description" content="Non, ce n'est pas un site de rencontre." />
+    <meta name="twitter:image" content="https://atsuhiro.site/qui-suis-je-hero.png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="16x16" />
+    <link rel="icon" href="/android-chrome-192x192.png" sizes="192x192" type="image/png" />
+    <link rel="icon" href="/android-chrome-512x512.png" sizes="512x512" type="image/png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   </head>
   <body>
     <div id="root"></div>
